[tool.poetry]
name = "flagfleet-api"
version = "0.1.0"
description = ""
authors = ["ER28 <l.guerra-rago@pm.me>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
