[tool.poetry]
name = "flagfleet-api"
version = "0.1.0"
description = ""
authors = ["ER28 <l.guerra-rago@pm.me>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
pydantic-settings = "^2.6.1"
pydantic = "^2.9.2"
sqlmodel = "^0.0.22"
dependency-injector = "^4.43.0"
pg8000 = "^1.31.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
